# proj-ist-unit-tests

./: README.md
comp/2022-2023/: .gitignore  README.md  test.sh
ia/2021-2022/: README.md  test.sh
iaed-p1/: Makefile  config.default  justdoit.sh
iaed-p1/tests/: aval_group01.in  aval_group01.out  aval_group02.in  aval_group03.out  aval_limits01.in  ct001.in  ct002.in  ct007.in  ct008.out  ct009.out  ct010.in  ct013.out  ct014.in  t03.in  t03.out  t05.out  t06.in  t07.in  t07.out  t09.out  t10.in
iaed-p2/: README.md  config.default  justdoit.sh
iaed-p2/tests/: Makefile  aval_list01.out  aval_list02.out  aval_print01.in  aval_print02.out  aval_set01.out  aval_set02.in  aval_set02.out  t01.out  t06.in  t08.out  t09.in  t09.out  t10.in  t10.out  test_delete_01.in  test_delete_01.out  test_delete_02.in  test_delete_02.out  test_delete_03.out  test_delete_04.in  test_delete_04.out  test_delete_06.in  test_delete_06.out  test_delete_07.out  test_find_01.out  test_find_02.in  test_find_02.out  test_list_01.out  test_max_01.in  test_max_01.out  test_search_01.in  test_search_02.in  test_search_02.out
lp-p1/: index.js  package.json
lp-p1/tests/: scrape.js  test01.in  test02.in  test03.in  test04.in  test05.in  test06.in  test07.in  test08.in  test09.in  test10.in  (+20 more)
rc/2022-2023/: Cargo.toml  README.md
rc/2022-2023/src/: lib.rs  main.rs
rc/2022-2023/src/common/: errors.rs  macros.rs  messages.rs  mod.rs  utils.rs
rc/2022-2023/src/server/: mod.rs  server.rs  start_cmd.rs
rc/2022-2023/tests/: sample_test.rs  start_game.rs
rc/2022-2023/tests/common/: utils.rs
(+1326 files in other folders)
